responsive view for home page fixed - but width too short

--- a/main/src/components/pages/home/Home.css
+++ b/main/src/components/pages/home/Home.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: row;
     z-index: 1;
+    overflow: hidden;
 }
 
 .home-shape {
